[package]
name = "ruapt_proxy"
version = "0.1.0"
authors = ["接舆 <qinwu.qw@alibaba-inc.com>"]
edition = "2018"
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
actix-web = "3"
env_logger = "*"
deadpool-redis = "0.6.1"
deadpool = "*"
bendy = "*"
cuckoofilter = "0.5.0"
tokio = { version = "1", features = ["sync"] }
