[package]
name = "ruapt_proxy"
version = "0.1.0"
authors = ["接舆 <qinwu.qw@alibaba-inc.com>"]
edition = "2018"
workspace = "../"

[dependencies]
serde = "*"
actix-web = "3"
sqlx = {version = "0.4.1", features = ["postgres", "runtime-actix-native-tls"]}
env_logger = "*"
deadpool = "0.5.2"
deadpool-redis = "0.6.1"
bendy = "*"
bloom = "0.3.2"
tokio = { version = "1", features = ["sync"] }
config = "*"
dotenv = "*"
serde_qs = "*"
lazy_static = "*"
reqwest = { version = "0.11", features = [ "json" ] }
