[package]
name = "ruapt_tracker"
version = "0.1.0"
authors = ["接舆 <qinwu.qw@alibaba-inc.com>"]
edition = "2018"
workspace = "../"
default-run = "ruapt_tracker"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { version = "0.3", features = ["full"] }
tokio-util = { version = "0.5.0", features = ["full"] }
deadpool-redis = "0.6.1"
deadpool = "*"
async-trait = "*"
serde = "*"
bendy = { version = "^0.3", features = ["std", "serde"] }
serde_bencode = "^0.2.3"
futures = "0.3"
dotenv = "0.15.0"
jemallocator = "0.3.2"
base64 = "0.13.0"